...

  Scaffold(
      modifier = Modifier.testTag("searchScreen"),
      topBar = {
        Column(
...
                      Modifier.fillMaxWidth()
                          .padding(top = 16.dp, start = 16.dp, end = 16.dp)
                          .testTag("searchTextField"))
              LazyRow(
                  modifier = Modifier.fillMaxWidth().padding(vertical = 6.dp, horizontal = 20.dp)) {
...
                                  selectedContainerColor =
                                      MaterialTheme.colorScheme.primaryContainer),
                          modifier = Modifier.padding(horizontal = 5.dp).testTag("userFilterChip"))
                    }
                    item {
...
                                  selectedContainerColor =
                                      MaterialTheme.colorScheme.primaryContainer),
                          modifier = Modifier.padding(horizontal = 5.dp).testTag("noteFilterChip"))
                    }
                    item {
...
                                      MaterialTheme.colorScheme.primaryContainer),
                          modifier =
                              Modifier.padding(horizontal = 5.dp).testTag("folderFilterChip"))
                    }
                    item {
...
                                  selectedContainerColor =
                                      MaterialTheme.colorScheme.primaryContainer),
                          modifier = Modifier.padding(horizontal = 5.dp).testTag("deckFilterChip"))
                    }
                  }
...
              contentPadding = PaddingValues(horizontal = 16.dp),
              modifier =
                  Modifier.fillMaxWidth().padding(padding).testTag("filteredPublicNoteList")) {
                items(filteredPublicNotes.value.size) { index ->
                  NoteItem(
...
              contentPadding = PaddingValues(horizontal = 16.dp),
              modifier =
                  Modifier.fillMaxWidth().padding(padding).testTag("filteredFriendNoteList")) {
                items(filteredFriendsNotes.value.size) { index ->
                  NoteItem(
...
          LazyColumn(
              contentPadding = PaddingValues(horizontal = 16.dp),
              modifier = Modifier.fillMaxWidth().padding(padding).testTag("filteredUserList")) {
                items(filteredUsers.value.size) { index ->
                  val userState = remember { derivedStateOf { filteredUsers.value[index] } }
...
                  Modifier.fillMaxWidth()
                      .padding(horizontal = 16.dp)
                      .testTag("filteredPublicFolderList"),
              folderViewModel = folderViewModel,
              noteViewModel = noteViewModel,
...
                  Modifier.fillMaxWidth()
                      .padding(horizontal = 16.dp)
                      .testTag("filteredFriendFolderList"),
              folderViewModel = folderViewModel,
              noteViewModel = noteViewModel,
...
              contentPadding = PaddingValues(horizontal = 16.dp),
              modifier =
                  Modifier.fillMaxWidth().padding(padding).testTag("filteredPublicDeckList")) {
                items(filteredPublicDecks.value.size) { index ->
                  DeckItem(
...
              contentPadding = PaddingValues(horizontal = 16.dp),
              modifier =
                  Modifier.fillMaxWidth().padding(padding).testTag("filteredFriendDeckList")) {
                items(filteredFriendsDecks.value.size) { index ->
                  DeckItem(
...
                      .fillMaxWidth()
                      .padding(24.dp)
                      .testTag("noSearchResults"),
              text = stringResource(R.string.not_found_search, searchedText),
              textAlign = TextAlign.Center,
...
