...
              }
        },
        dismissButton = { Button(onClick = { showMoveOutDialog = false }) { Text("Cancel") } })
  }
  Card(
      modifier =
          Modifier.testTag("noteCard")
              .fillMaxWidth()
              .padding(vertical = 4.dp)
              // Enable drag and drop for the note card (as a source)
              .dragAndDropSource {
                detectTapGestures(
                    onTap = { onClick() },
...
    onClick: () -> Unit
) {
  val dropSuccess = remember { mutableStateOf(false) }

  Card(
      modifier =
          Modifier.testTag("folderCard")
              .padding(vertical = 4.dp)
              .dragAndDropSource {
                detectTapGestures(
                    // When tapping on a folder, perform onCLick
                    onTap = { onClick() },
                    onLongPress = {
...
