...
        folderViewModel = folderViewModel,
        onDismiss = { showBottomSheet = false },
        navigationActions = navigationActions)
  }

  Card(
      Modifier.testTag("deckCard")
          .height(140.dp)
          .padding(4.dp)
          .semantics(mergeDescendants = true, properties = {})
          .fillMaxWidth()
          // Enable drag and drop for the note card as a source
          .dragAndDropSource {
...
