...
    fileViewModel: FileViewModel,
    isFollowerSheetOfCurrentUser: Boolean = false,
    onClick: () -> Unit,
    onRemove: () -> Unit = {}
) {
  Row(
      modifier = Modifier.padding(8.dp).testTag("userItem").clickable { onClick() },
  ) {
    ThumbnailDynamicPic(user, fileViewModel)
    Column(
        verticalArrangement = Arrangement.Center,
        modifier = Modifier.padding(horizontal = 10.dp).weight(1f)) {
          // Display the user's full name and handle (username)
...
